# stock-market-predictor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: config.yaml  smoke.yaml
src/smp/: __init__.py  backtest.py  config.py  evaluate.py  losses.py  metrics.py  train.py
src/smp/models/: __init__.py  base.py  lstm.py  registry.py  tcn.py  tft.py
src/smp/tracking/: __init__.py  mlflow_utils.py
src/smp/tuning/: __init__.py  optuna_search.py
tests/: conftest.py  test_data.py  test_losses_metrics.py  test_models.py
