[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-market-predictor"
version = "0.1.0"
description = "Exploring TFT / LSTM / TCN forecasting architectures on daily stock returns"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "pytorch-lightning>=2.1",
    "yfinance>=0.2.40",
    "optuna>=3.6",
    "mlflow>=2.12",
    "pandas>=2.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
smp-train = "smp.train:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
